# CA_edu_site

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  astro.config.mjs  free-ca-prep-platform-plan.md  manual_verification_checklist.md  package-lock.json  package.json  review_queue.md  site_audit_2026-07-17.md  sources.yaml
trading_os/: .env.example  .gitignore  CLAUDE.md  initial_prompt.md  pyproject.toml
trading_os/.claude/agents/: critical-reviewer.md  docs-writer.md  explorer.md  implementer.md  quant-engineer.md  test-writer.md
trading_os/docs/: adding_signals.md  assumptions.md  backtesting_runbook.md  champion_strategy_b2dst.md  contract_note_spec.md  momentum_research_notes.md  results_summary.md  runbook.md
trading_os/scripts/adhoc/: b2dst_2019_2020.py  b2dst_n20_2019_2020.py  b2dst_topn_smallcap_fix.py  b2dst_topn_sweep.py  b2dst_walkforward.py  backfill_2017.py  batch1_m2_improvements.py  batch2_m2_overlays.py  batch3_residual_momentum.py  bhav_pipeline.py  build_2020_topn.py  build_nse200_2020.py  manual_totp_login.py  nifty200_2019.csv  nifty200_sma_cross.py  nifty200_variants.py  nifty50_gap_up_orb.py  nifty50_gap_up_orb_v2.py  nifty50_sma200_atr.py  nifty50_stocks_in_play_orb.py  niftybees_first_last_halfhour.py  nse1000_2020.csv  nse1000dyn_walkforward.py  nse1224_2020.csv  nse2000.csv  nse2000_momentum.py  nse2000_plus_delisted_2019.csv  nse200_2020.csv  nse200_dynamic.py  nse500_2020.csv  rerun_v6_trades.py  shares_outstanding_2026-07-12.csv  (+8 more)
trading_os/tests/: conftest.py  test_config.py  test_core_models.py  test_costs.py  test_gridexpand.py
(+237 files in other folders)
