[project]
name = "tradingos"
version = "0.1.0"
description = "India equity (NSE) backtesting, paper and live trading platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "polars>=1.0",
    "pandas>=3.0",
    "numpy>=2.4",
    "pyarrow>=16",
    "duckdb>=1.0",
    "sqlmodel>=0.0.19",
    "vectorbt>=1.1",
    "pandas-ta-classic>=0.6",
    "kiteconnect>=5.0",
    "pyotp>=2.9",
    "apscheduler>=3.10,<4",
    "typer>=0.12",
    "quantstats>=0.0.62",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "requests>=2.31",
]

[project.scripts]
platform = "tradingos.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/tradingos"]
